# genesis-gymnasium

./: README.md  pyproject.toml
genesis_gymnasium/: __init__.py
genesis_gymnasium/core/: genesis_env.py
genesis_gymnasium/envs/assets/xmls/: chase.xml
genesis_gymnasium/envs/assets/xmls/agents/: car.xml  point.xml
genesis_gymnasium/envs/assets/xmls/scenes/: chase_scene.xml
genesis_gymnasium/envs/chase/: chase_env.py
scripts/: chase_scene.py
tests/: test_chase_env.py
