[tool.poetry]
name = "genesis-gymnasium"
version = "0.1.0"
description = "Gymnasium environment using Genesis"
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "Apache Licence 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
genesis-world = "^0.2.1"
torch = "^2.6.0"
gymnasium = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
imageio = "^2.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
